# mercury

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  audit.toml  codecov.yml  deny.toml  e2e-matrix.toml  flake.nix  justfile
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/cosmos-setup/: action.yml
.github/actions/ethereum-setup/: action.yml
.github/actions/kurtosis-setup/: action.yml
.github/actions/solana-setup/: action.yml
.github/scripts/: generate-e2e-matrix.py
.github/workflows/: audit.yml  check.yml  ci.yml  e2e.yml  nix.yml  python-lint.yml  release.yaml
crates/chain-cache/: Cargo.toml
crates/chain-cache/src/: bounded_cache.rs  coordinator.rs  lib.rs  passthrough.rs  queries.rs
crates/chain-traits/: Cargo.toml
crates/chain-traits/src/: builders.rs  cached.rs  delegate.rs  events.rs  inner.rs  lib.rs  message_builders.rs  messaging.rs  packet_builders.rs  packet_queries.rs  payload_builders.rs  prelude.rs  queries.rs  relay.rs  tx.rs  types.rs
crates/chain-traits/src/relay/: birelay.rs  client.rs  context.rs  event.rs  ibc_event.rs  packet.rs
crates/chains/core/cosmos/: Cargo.toml
crates/chains/core/cosmos/src/: builders.rs  chain.rs  client_types.rs  config.rs  events.rs  gas.rs  keys.rs  lib.rs  misbehaviour.rs  queries.rs  tx.rs  types.rs
crates/chains/core/ethereum/: Cargo.toml
crates/chains/core/ethereum/src/: chain.rs  (+15 more)
crates/chains/core/solana/: Cargo.toml
crates/chains/core/solana/src/: accounts.rs  alt.rs  borsh_header.rs  chain.rs  config.rs  events.rs  ibc_types.rs  instructions.rs  keys.rs  lib.rs  rpc.rs  tx.rs  types.rs
crates/chains/core/solana/src/instructions/: chunking.rs  client.rs  signatures.rs
crates/chains/cosmos/: Cargo.toml
crates/chains/cosmos-bridges/: Cargo.toml
crates/chains/cosmos-bridges/src/: ethereum_bridge.rs  lib.rs  wrapper.rs
crates/chains/cosmos-counterparties/: Cargo.toml
crates/chains/cosmos-counterparties/src/: ethereum_counterparty.rs  lib.rs  plugin.rs  wrapper.rs
crates/chains/cosmos-ethereum-relay/: Cargo.toml
crates/chains/cosmos-ethereum-relay/src/: lib.rs
crates/chains/cosmos/src/: builders.rs  chain.rs  client_types.rs  config.rs  encoding.rs  events.rs  gas.rs  ibc_v2.rs  keys.rs  lib.rs  message_builders.rs  messaging.rs  misbehaviour.rs  packet_builders.rs  packet_queries.rs  payload_builders.rs  queries.rs  rpc.rs  status.rs  tx.rs  types.rs
crates/chains/counterparties/cosmos/: Cargo.toml
crates/chains/counterparties/cosmos/src/: client_builders.rs  ethereum_counterparty.rs  lib.rs  plugin.rs  solana_counterparty.rs  wrapper.rs
crates/chains/counterparties/solana/: Cargo.toml
crates/chains/counterparties/solana/src/: client_builders.rs  cosmos_counterparty.rs  lib.rs  plugin.rs  wrapper.rs
crates/chains/ethereum/: Cargo.toml
crates/chains/ethereum-bridges/: Cargo.toml
crates/chains/ethereum-counterparties/: Cargo.toml
crates/chains/ethereum-counterparties/src/: cosmos_counterparty.rs  lib.rs  plugin.rs  wrapper.rs
crates/chains/ethereum/src/: aggregator.rs  builders.rs  chain.rs  config.rs  contracts.rs  cosmos_bridge.rs  events.rs  ics24.rs  lib.rs  misbehaviour.rs  queries.rs  sp1.rs  tx.rs  types.rs
crates/chains/relay-pairs/cosmos-cosmos/: Cargo.toml
crates/chains/relay-pairs/cosmos-cosmos/src/: lib.rs
crates/chains/relay-pairs/cosmos-solana/: Cargo.toml
crates/chains/relay-pairs/cosmos-solana/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  registry.rs
crates/cli/src/commands/: clear.rs  config_cmd.rs  create.rs  health_check.rs  keys.rs  misbehaviour.rs  query.rs  start.rs  status.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: encoding.rs  error.rs  lib.rs  plugin.rs  registry.rs  rpc_guard.rs  runtime.rs  validate.rs  worker.rs
crates/cosmos/: Cargo.toml
crates/cosmos/src/: chain.rs  config.rs  encoding.rs  events.rs  ibc_v2.rs  keys.rs  lib.rs  message_builders.rs  messaging.rs  packet_builders.rs  packet_queries.rs  payload_builders.rs  queries.rs  status.rs  tx.rs  types.rs
crates/e2e/: Cargo.toml  README.md
crates/e2e/mock-wasm-eth-lc/: Cargo.toml
crates/e2e/mock-wasm-eth-lc/src/: lib.rs
crates/e2e/src/: beacon_lc_context.rs  bootstrap.rs  context.rs  cosmos_eth_context.rs  lib.rs  relayer.rs
crates/e2e/src/bootstrap/: anvil.rs  cosmos_docker.rs  kurtosis.rs  mod.rs  wasm_lc.rs
crates/e2e/tests/: cosmos_cosmos.rs  cosmos_ethereum.rs
crates/e2e/tests/cosmos_cosmos/: binary.rs  bootstrap.rs  create_client.rs  transfer.rs
crates/e2e/tests/cosmos_ethereum/: bootstrap.rs  context_setup.rs  create_client.rs  transfer.rs  transfer_beacon.rs  update_client.rs
crates/relay/: Cargo.toml
crates/relay/src/: birelay.rs  client.rs  context.rs  event.rs  filter.rs  lib.rs  packet.rs  testhelpers.rs  workers.rs
crates/relay/src/workers/: clearing_worker.rs  client_refresh.rs  event_watcher.rs  misbehaviour_worker.rs  packet_sweeper.rs  packet_worker.rs  tx_worker.rs
crates/relay/tests/: cross_chain_compile.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: guard.rs  lib.rs  metric.rs  recorder.rs
crates/telemetry/src/metric/: backlog.rs  client.rs  event.rs  gas.rs  packet.rs  proof.rs  query.rs  sweep.rs  tx.rs  wallet.rs  worker.rs
docs/: adding-a-chain.md  architecture.md  cgp.md  feature-parity.md  ibc-v2.md  nix-build-fixes.md  roadmap.md  why-rewrite.md
docs/superpowers/specs/: 2026-03-13-misbehaviour-detection-design.md
e2e/: Cargo.toml  README.md
e2e/mock-wasm-eth-lc/: Cargo.toml
e2e/src/: beacon_lc_context.rs  bootstrap.rs  context.rs  cosmos_eth_context.rs  relayer.rs
e2e/src/bootstrap/: anvil.rs  cosmos_docker.rs  kurtosis.rs  solana.rs  traits.rs  wasm_lc.rs
e2e/tests/: cosmos_cosmos.rs  cosmos_ethereum.rs  cosmos_solana.rs
e2e/tests/cosmos_cosmos/: binary.rs  transfer.rs
e2e/tests/cosmos_ethereum/: bootstrap.rs  transfer.rs  transfer_beacon.rs
e2e/tests/cosmos_solana/: bidirectional.rs  bootstrap.rs  transfer.rs
examples/: relayer.toml
nix/: agave.nix
(+13 files in other folders)
