[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/chain-traits",
    "crates/chains/cosmos",
    "crates/relay",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "IBC v2 relayer in Rust — plain traits, no macro frameworks"
license = "Apache-2.0"
repository = "https://github.com/vaporif/mercury"
readme = "README.md"
keywords = ["ibc", "cosmos", "relayer", "blockchain", "interoperability"]
categories = ["network-programming"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"
branches_sharing_code = "allow"

[workspace.dependencies]
async-trait = "0.1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = { version = "0.3", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mercury-core = { path = "crates/core" }
mercury-chain-traits = { path = "crates/chain-traits" }
mercury-cosmos = { path = "crates/chains/cosmos" }
mercury-relay = { path = "crates/relay" }
mercury-cli = { path = "crates/cli" }

tendermint = { version = "0.40", features = ["secp256k1"] }
tendermint-rpc = { version = "0.40", features = ["http-client"] }
tendermint-proto = "0.40"
tendermint-light-client-verifier = "0.40"
ibc = { version = "0.57", default-features = false, features = ["serde"] }
ibc-proto = { version = "0.52", default-features = false, features = ["serde"] }
ibc-client-tendermint = { version = "0.57", default-features = false }
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.14", features = ["tls-native-roots", "channel", "transport"] }
secp256k1 = { version = "0.31", features = ["serde"] }
sha2 = "0.10"
bech32 = "0.11"
hex = "0.4"
toml = "0.8"
zeroize = "1"
