[workspace]
resolver = "2"

members = [
  "crates/core",
  "crates/chain-traits",
  "crates/chain-cache",
  "crates/chains/core/cosmos",
  "crates/chains/core/ethereum",
  "crates/chains/counterparties/cosmos",
  "crates/chains/counterparties/ethereum",
  "crates/chains/relay-pairs/cosmos-cosmos",
  "crates/chains/relay-pairs/cosmos-ethereum",
  "crates/chains/core/solana",
  "crates/chains/counterparties/solana",
  "crates/chains/relay-pairs/cosmos-solana",
  "crates/relay",
  "bin",
  "e2e",
  "e2e/mock-wasm-eth-lc",
  "crates/telemetry",
]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.91.0"
description = "IBC v2 relayer in Rust — plain traits, no macro frameworks"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vaporif/mercury"
readme = "README.md"
keywords = ["ibc", "cosmos", "relayer", "blockchain", "interoperability"]
categories = ["network-programming"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"
branches_sharing_code = "allow"

[workspace.dependencies]
async-trait = "0.1"
eyre = "0.6"
thiserror = "2"
derive_more = { version = "2", default-features = false, features = ["display", "from", "into", "as_ref"] }
color-eyre = "0.6"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
axum = "0.8"

mercury-core = { path = "crates/core" }
mercury-chain-traits = { path = "crates/chain-traits" }
mercury-chain-cache = { path = "crates/chain-cache" }
mercury-cosmos = { path = "crates/chains/core/cosmos" }
mercury-cosmos-counterparties = { path = "crates/chains/counterparties/cosmos" }
mercury-ethereum = { path = "crates/chains/core/ethereum" }
mercury-ethereum-counterparties = { path = "crates/chains/counterparties/ethereum" }
mercury-cosmos-cosmos-relay = { path = "crates/chains/relay-pairs/cosmos-cosmos" }
mercury-cosmos-ethereum-relay = { path = "crates/chains/relay-pairs/cosmos-ethereum" }
mercury-solana = { path = "crates/chains/core/solana" }
mercury-solana-counterparties = { path = "crates/chains/counterparties/solana" }
mercury-cosmos-solana-relay = { path = "crates/chains/relay-pairs/cosmos-solana" }
mercury-relay = { path = "crates/relay" }
mercury-cli = { path = "bin" }

tendermint = { version = "0.40", features = ["secp256k1"] }
tendermint-rpc = { version = "0.40", features = ["http-client", "websocket-client"] }
tendermint-proto = "0.40"
tendermint-light-client-verifier = "0.40"
ibc = { version = "0.57", default-features = false, features = ["serde"] }
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "main", default-features = false, features = ["serde", "client", "transport"] }
ibc-client-tendermint = { version = "0.57", default-features = false }
ibc-core-commitment-types = { version = "0.57", default-features = false }

solana-client                         = { version = "3" }
solana-sdk                            = { version = "4" }
solana-commitment-config              = { version = "3" }
solana-transaction-status             = { version = "3" }
solana-system-interface               = { version = "3" }
solana-compute-budget-interface       = { version = "3" }
solana-address-lookup-table-interface = { version = "3" }
solana-message                        = { version = "4" }
solana-transaction                    = { version = "4" }
bincode                   = { version = "3" }
anchor-lang               = { version = "0.32.1" }
anchor-client             = { version = "0.32.1" }
borsh                     = "1"

prost = "0.14"
prost-types = "0.14"
# TODO: upgrade to tonic 0.14 once ibc-proto/cosmos-sdk-proto support it
tonic = { version = "0.14", features = [
  "tls-native-roots",
  "channel",
  "transport",
] }
secp256k1 = { version = "0.31", features = ["serde"] }
sha2 = "0.11"
ripemd = "0.2"
bech32 = "0.11"
hex = "0.4"
globset = "0.4"
toml = "1.1"
zeroize = "1"
url = "2"
alloy = { version = "1", default-features = false, features = [
  "consensus",
  "contract",
  "eips",
  "network",
  "provider-http",
  "provider-ws",
  "reqwest",
  "rpc-types",
  "signer-local",
  "signers",
  "sol-types",
] }
testcontainers = "0.27"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
  "charset",
] }
base64 = "0.22"
ethereum-types = { git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "86505ac8c69be4e955f8b7d3baafbd0fddaeefee" }
ethereum-apis = { git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "86505ac8c69be4e955f8b7d3baafbd0fddaeefee" }
ethereum-light-client = { git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "86505ac8c69be4e955f8b7d3baafbd0fddaeefee" }
sp1-ics07-tendermint-prover = { git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "86505ac8c69be4e955f8b7d3baafbd0fddaeefee" }
ibc-proto-eureka = { package = "ibc-proto", version = "0.51", default-features = false }
sp1-sdk = { version = "6.1", default-features = false, features = ["network"] }
sp1-prover = { version = "6.1", default-features = false }
ibc-eureka-solidity-types = { git = "https://github.com/cosmos/solidity-ibc-eureka", rev = "86505ac8c69be4e955f8b7d3baafbd0fddaeefee", features = ["rpc"] }
governor = "0.10.4"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "trace", "spec_unstable_metrics_views"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "metrics", "trace", "reqwest-client"] }
tracing-opentelemetry = "0.32"
opentelemetry-system-metrics = "0.31"
mercury-telemetry = { path = "crates/telemetry" }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1
debug = false
