[package]
name = "mercury-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-cosmos-counterparties = { workspace = true, features = ["ethereum-beacon", "solana"] }
mercury-relay = { workspace = true }
mercury-chain-cache = { workspace = true }

testcontainers = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tendermint-rpc = { workspace = true }
tonic = { workspace = true }
hex = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
ibc-client-tendermint = { workspace = true }
tendermint = { workspace = true }
prost = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
mercury-ethereum = { workspace = true, features = ["sp1"] }
mercury-ethereum-counterparties = { workspace = true, features = ["cosmos-sp1"] }
sp1-ics07-tendermint-prover = { workspace = true }
sp1-sdk = { workspace = true }
ibc-eureka-solidity-types = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
flate2 = "1"
base64 = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
mercury-solana = { workspace = true }
mercury-solana-counterparties = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-system-interface = { workspace = true }
solana-loader-v3-interface = { workspace = true }
borsh = { workspace = true }
