[package]
name = "mercury-chain-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
