[package]
name = "mercury-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "mercury"
path = "src/main.rs"

[dependencies]
mercury-core = { workspace = true }
mercury-cosmos = { workspace = true }
mercury-relay = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
