[package]
name = "mercury-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "mercury"
path = "src/main.rs"

[dependencies]
mercury-core = { workspace = true }
mercury-cosmos = { workspace = true }
mercury-relay = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
serde_json = { workspace = true }
