[package]
name = "mercury-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "mercury-relayer"
path = "src/main.rs"

[dependencies]
mercury-chain-cache = { workspace = true }
mercury-core = { workspace = true }
mercury-cosmos-counterparties = { workspace = true, features = ["ethereum-beacon"] }
mercury-ethereum = { workspace = true }
mercury-ethereum-counterparties = { workspace = true, features = ["cosmos-sp1"] }
mercury-relay = { workspace = true }
mercury-telemetry = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
ibc = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
alloy = { workspace = true }
url = { workspace = true }
