[package]
name = "mercury-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
eyre = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
opentelemetry = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
