[package]
name = "mercury-cosmos"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
ibc-client-tendermint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
bech32 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
