[package]
name = "mercury-e2e"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mercury-core         = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-cosmos       = { workspace = true }
mercury-relay        = { workspace = true }

testcontainers       = { workspace = true }
tokio                = { workspace = true }
tokio-util           = { workspace = true }
async-trait          = { workspace = true }
eyre                 = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
tendermint-rpc       = { workspace = true }
tonic                = { workspace = true }
hex                  = { workspace = true }
ibc                  = { workspace = true }
ibc-proto            = { workspace = true }
ibc-client-tendermint = { workspace = true }
tendermint           = { workspace = true }
prost                = { workspace = true }
secp256k1            = { workspace = true }
sha2                 = { workspace = true }
uuid                 = { version = "1", features = ["v4"] }
tempfile             = "3"
