[package]
name = "mercury-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-telemetry = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
mercury-cosmos-counterparties = { workspace = true, features = ["ethereum-beacon"] }
mercury-ethereum-counterparties = { workspace = true, features = ["cosmos-sp1"] }
