[package]
name = "mercury-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Prometheus telemetry for Mercury relayer"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
eyre = { workspace = true }
mercury-core = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
