[package]
name = "mercury-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenTelemetry telemetry for Mercury relayer"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-system-metrics = { workspace = true }
eyre = { workspace = true }
mercury-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
