[package]
name = "mock-wasm-eth-lc"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.14"
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "main", default-features = false, features = ["serde"] }

[features]
library = []
