[package]
name = "mercury-solana"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }

solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-transaction-status = { workspace = true }
solana-system-interface = { workspace = true }
solana-compute-budget-interface = { workspace = true }
