[package]
name = "mercury-cosmos-counterparties"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-chain-cache = { workspace = true }
mercury-cosmos = { workspace = true }
mercury-relay = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
ibc = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

# Cross-chain (optional)
mercury-ethereum = { workspace = true, optional = true }
ibc-proto = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tendermint = { workspace = true, optional = true }
tendermint-rpc = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
ibc-client-tendermint = { workspace = true, optional = true }
alloy = { workspace = true, optional = true }
ethereum-light-client = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[features]
ethereum-beacon = [
    "dep:mercury-ethereum",
    "dep:ibc-proto",
    "dep:prost",
    "dep:tendermint",
    "dep:tendermint-rpc",
    "dep:tokio",
    "dep:ibc-client-tendermint",
    "dep:alloy",
    "dep:ethereum-light-client",
    "dep:serde_json",
    "dep:hex",
]
