[package]
name = "mercury-solana-counterparties"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-chain-cache = { workspace = true }
mercury-solana = { workspace = true }
mercury-relay = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }

# Cross-chain (optional)
mercury-cosmos = { workspace = true, optional = true }
mercury-cosmos-counterparties = { workspace = true, optional = true }
ibc = { workspace = true, optional = true }
ibc-client-tendermint = { workspace = true, optional = true }
tendermint = { workspace = true, optional = true }

[features]
cosmos = [
    "dep:mercury-cosmos",
    "dep:mercury-cosmos-counterparties",
    "dep:ibc",
    "dep:ibc-client-tendermint",
    "dep:tendermint",
]
