[package]
name = "mercury-solana-counterparties"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-chain-cache = { workspace = true }
mercury-solana = { workspace = true, features = ["cosmos"] }
mercury-relay = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
solana-sdk = { workspace = true }
borsh = { workspace = true }

# Cross-chain (optional)
mercury-cosmos = { workspace = true, optional = true }
ibc = { workspace = true, optional = true }
ibc-client-tendermint = { workspace = true, optional = true }
ibc-proto = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tendermint = { workspace = true, optional = true }

[features]
cosmos = [
    "dep:mercury-cosmos",
    "dep:ibc",
    "dep:ibc-client-tendermint",
    "dep:ibc-proto",
    "dep:prost",
    "dep:tendermint",
]
