[package]
name = "mercury-solana-counterparties"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mercury-core = { workspace = true }
mercury-chain-traits = { workspace = true }
mercury-chain-cache = { workspace = true }
mercury-solana = { workspace = true, features = ["cosmos"] }
mercury-relay = { workspace = true }
mercury-cosmos = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
solana-sdk = { workspace = true }
borsh = { workspace = true }
ibc = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-proto = { workspace = true }
prost = { workspace = true }
tendermint = { workspace = true }
